--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,7 @@
     <title>React ES6 Demo App</title>
 </head>
 <body>
-  <div id="app">
-    <h2>React, Redux In ES6</h2>
-  </div>
+  <div id="app"></div>
   <script src="/bundle.js"></script>
 </body>
 </html>
